--- a/src/package.xml
+++ b/src/package.xml
@@ -1,4 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>37.0</version>
+    <types>
+        <members>HRHD_MassCaseUpload</members>        
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>Case</members>
+        <members>Contact</members>
+        <name>CustomObject</name>
+    </types>
+   
+    <version>36.0</version>
 </Package>
+ 
