--- a/lib/build.xml
+++ b/lib/build.xml
@@ -12,7 +12,7 @@
 	 <target name="deploy">
 	 <sf:deploy username="${sf.username}" 
 	password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="KaiserPermananteCIDemo" 
-	rollbackOnError="true" checkOnly="false">
+	rollbackOnError="true" checkOnly="false" />
       
     </target> 
 	
